# parallel-pmf

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  PMF.cpp  PMF.h  README.md  main.cpp  tutorial.md  utils.cpp  utils.h
docs/: tutorial.md
example/: pmf_tutorial.md  sample_recommend.sh
models/: CMakeLists.txt  DataManager.cpp  DataManager.h  PMF.cpp  PMF.h  abstractdataloader.h  abstractdatamanager.h  dataloader.cpp  dataloader.h  datamanager.cpp  datamanager.h  modeltypes.h  ratingsdata.cpp  ratingsdata.h  utils.cpp  utils.h
movielens/: movies.csv
notebooks/: pmf_tutorial.ipynb
pmf/: eval.py  hw2.py  model.py
pypmf/: install.sh  requirements.txt  setup.py
pypmf/pmf/: __init__.py  plot.py  pmf.py
script/: sample_recommend.sh  sample_train.sh
test/: CMakeLists.txt  utils_test.cpp
